--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,10 +7,27 @@ body
     margin: 0;
     padding: 0;
 }
-#container
+
+#cabecera
+{
+    background: #33A;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+    #cabecera #tagline
+{
+    font-weight: normal;
+    font-size: 0.8em;
+    color: grey;
+}
+
+}
+
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -19,4 +36,11 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+
+{
+    padding: 1em;
+
 }
