--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,7 +24,7 @@ body
     color: grey;
 }
 
-
+#container
 {
     width: 70%;
     padding: 0;
@@ -43,4 +43,12 @@ body
 {
     padding: 1em;
 
+}
+
+#footer
+{
+    background: #777;
+    color: black;
+    text-align: center;
+    padding: 0.5ex;
 }
